News UAT/force-app/main/default/objects/Agreement__c/Agreement__c.object-meta.xml
<CustomObject>
    <description>To capture contracts/ agreements or internal rates agreements between NewsLtd and customers/ agencies</description>
    <label>Agreement</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreements</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>