News UAT/force-app/main/default/objects/Agreement__c/fields/STOP_expiry_notification_emails__c.field-meta.xml
<CustomField>
    <fullName>STOP_expiry_notification_emails__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Only check this tickbox if you want to STOP all expiry notifications emails from 90, 60 and 30 days of contract expiry.</inlineHelpText>
    <label>STOP expiry notification emails</label>
    <type>Checkbox</type>
</CustomField>