News UAT/force-app/main/default/objects/Agreement__c/fields/STOP_QTR_Review_notification_emails__c.field-meta.xml
<CustomField>
    <fullName>STOP_QTR_Review_notification_emails__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Only check this tickbox if you want to STOP all Quarterly Review notifications emails of 2, 5, 8, and 11 months after agreement date.</inlineHelpText>
    <label>STOP QTR Review notification emails</label>
    <type>Checkbox</type>
</CustomField>