News UAT/force-app/main/default/objects/Agreement__c/fields/Trigger_Send_emails_to_account_owners__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Send_emails_to_account_owners__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, will send out emails to all account owners associated to agreement. Once email is sent, trigger will turn this checkbox off.
NOTE: This checkbox is triggered by a time-based workflow and not the user.
DO NOT SHOW NO PAGE OR TO USERS</inlineHelpText>
    <label>Trigger: Send Expiry email to AM</label>
    <type>Checkbox</type>
</CustomField>