News UAT/force-app/main/default/objects/Agreement__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advertising Expenditure Agreement</fullName>
            </value>
            <value>
                <fullName>News Rate Agreement</fullName>
            </value>
            <value>
                <fullName>Contra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>