News UAT/force-app/main/default/objects/Agreement__c/listViews/DBL_2018_19_Agreements.listView-meta.xml
<ListView>
    <fullName>DBL_2018_19_Agreements</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>DBL 2018/19</value>
    </filters>
    <label>DBL 2018/19 Agreements</label>
</ListView>