News UAT/force-app/main/default/objects/Agreement__c/listViews/My_Agreements.listView-meta.xml
<ListView>
    <fullName>My_Agreements</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Notes__c</columns>
    <columns>Contact__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Mine</filterScope>
    <label>~My Agreements</label>
</ListView>