News UAT/force-app/main/default/objects/Agreement__c/listViews/NQN_Active_Contra_Agreements.listView-meta.xml
<ListView>
    <fullName>NQN_Active_Contra_Agreements</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>NQN</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Current,Future</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Contra</value>
    </filters>
    <label>NQN Active Contra Agreements</label>
    <sharedTo>
        <roleAndSubordinates>QLD_NQN_General_Manager</roleAndSubordinates>
    </sharedTo>
</ListView>