News UAT/force-app/main/default/objects/Agreement__c/listViews/X1718FY_Agreements.listView-meta.xml
<ListView>
    <fullName>X1718FY_Agreements</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>1718FY</value>
    </filters>
    <label>1718FY Agreements</label>
</ListView>