News UAT/force-app/main/default/objects/Agreement__c/listViews/X1819FY_Agreements_SA.listView-meta.xml
<ListView>
    <fullName>X1819FY_Agreements_SA</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>1819FY</value>
    </filters>
    <label>1819FY Agreements (SA)</label>
</ListView>